# habit-tracker

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/agent/: agent.py  graph_agent.py  help.py  prompt.py  tools.py
app/api/: deps.py
app/api/v1/: __init__.py  chat.py  conversations.py  settings.py  users.py  voice.py  websocket.py
app/core/: config.py  logging.py
app/db/: connection.py  queries.py  schema.sql
app/models/: schemas.py
app/services/: voice.py
scripts/: gen_token.py
tests/: conftest.py  test_agent.py  test_auth.py  test_chat.py  test_db.py  test_streaming.py
