[project]
name = "habit-tracker"
version = "0.1.0"
description = "An agentic AI system that logs habits from natural language"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.88.0",
    "fastapi>=0.135.2",
    "griffe>=1.5.0,<2.0.0",
    "loguru>=0.7.3",
    "openai>=2.30.0",
    "psycopg[binary,pool]>=3.3.3",
    "pydantic-ai>=1.77.0",
    "pydantic-settings>=2.13.1",
    "pyjwt>=2.12.1",
    "python-multipart>=0.0.22",
    "slowapi>=0.1.9",
    "sse-starlette>=3.3.3",
    "uvicorn>=0.42.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.8",
]
