[project]
name = "tally"
version = "0.1.0"
description = "Voice-first AI habit tracker — just say what you did"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.88.0",
    "elevenlabs>=2.3.0",
    "fastapi>=0.135.2",
    "griffe>=1.5.0,<2.0.0",
    "loguru>=0.7.3",
    "openai>=2.30.0",
    "psycopg[binary,pool]>=3.3.3",
    "pydantic-ai>=1.77.0",
    "pydantic-settings>=2.13.1",
    "pyjwt>=2.12.1",
    "python-multipart>=0.0.22",
    "slowapi>=0.1.9",
    "sse-starlette>=3.3.3",
    "uvicorn>=0.42.0",
]

[dependency-groups]
dev = [
    "black>=25.0.0",
    "httpx>=0.28.1",
    "mypy>=1.20.2",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.8",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
# E501: line length handled by black
# B008: FastAPI uses dependency callables (File, Depends) in default args by design
ignore = ["E501", "B008"]

[tool.black]
line-length = 88
target-version = ["py313"]

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true

# psycopg sets dict_row at pool-init time; stubs only know tuple rows.
# pydantic-settings resolves fields from env; stubs see missing constructor args.
# These are library stub gaps, not bugs in our code.
[[tool.mypy.overrides]]
module = "app.db.queries"
disable_error_code = ["return-value", "arg-type", "index", "call-overload"]

[[tool.mypy.overrides]]
module = "app.core.config"
disable_error_code = ["call-arg"]

# pydantic-ai stubs type output_type as str; pydantic-graph types BaseNode.run
# as returning End[Never]. Both are library stub gaps, not bugs in our code.
[[tool.mypy.overrides]]
module = "app.agent.graph_agent"
disable_error_code = ["override", "arg-type"]

# slowapi's exception-handler signature doesn't match FastAPI's expected type.
[[tool.mypy.overrides]]
module = "app.main"
disable_error_code = ["arg-type"]
